<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">املاک گستر</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">تنظیمات</string>
    <string name="title_activity_ac__login">ورود</string>
    <string name="ops">خطا</string>
    <string name="ok">متوجه شدم</string>
    <string name="title_activity_ac__register">ثبت نام</string>
    <string name="title_activity_ac__contact_us">تماس با ما</string>
    <string name="title_activity_ac__view_notification">مشاهده اطلاعیه</string>
    <string name="title_activity_ac__home">خانه</string>
    <string name="enter_your_message">پیام خود را وارد نمایید</string>
    <string name="send_message">ارسال پیام</string>
    <string name="send">ارسال</string>
    <string name="you_must_accept_term_of_usage">شما میبایست شرایط استفاده را قبول نمایید</string>
    <string name="there_is_a_problem_in_creating_new_account">خطا در هنگام ساخت حساب جدید</string>
    <string name="phone">شماره تلفن</string>
    <string name="address">آدرس</string>
    <string name="register">ثبت نام</string>
    <string name="please_fill_all_information_to_signup_to_application">لطفا تمامی اطلاعات خواسته شده را وارد نمایید</string>
    <string name="first_name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="phone_number">شماره تماس</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="male">مرد</string>
    <string name="i_accept_term_of_services">شرایط استفاده از سامانه را قبول دارم</string>
    <string name="login">ورود</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="contact_us">تماس با ما</string>
    <string name="title_activity_ac__master">املاک گستر</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="add">افزودن</string>
    <string name="search">جستجو</string>
    <string name="title_activity_ac__view_melk_request">مشاهده ملک درخواستی</string>
    <string name="title_activity_ac__add_melk">افزدون ملک</string>
    <string name="title_activity_ac__send_melk_info">ارسال اطلاعات ملک</string>
    <string name="title_activity_ac__search_result">نتایج جستجو</string>
    <string name="title_activity_ac__view_melk">مشاهده ملک</string>
    <string name="title_activity_ac__view_map">مشاهده موقعیت در نقشه</string>
    <string name="title_activity_ac__suggest_melk_phone_listner">پیشنهاد مشتری</string>
    <string name="title_activity_ac__intro">املاک گستر</string>
    <string name="title_activity_ac__smscredit_plans">بسته های پیامکی</string>
    <string name="title_activity_ac__bongah_plans">پلان بنگاه</string>
    <string name="rahname_estefadeh">راهنمای استفاده</string>
    <string name="title_activity_ac__tutorial">راهنمای استفاده</string>
    <string name="mazayeye_samane">مزایای استفاده از سامانه</string>
    <string name="cancel">برگشت</string>
</resources>