<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ata.activity.AC_Register" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <com.corebase.element.CustomTextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.corebase.element.CustomTextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/please_fill_all_information_to_signup_to_application" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.corebase.element.CustomEditText
                android:id="@+id/acRegister_et_FirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:text="Ata" >

                <requestFocus />
            </com.corebase.element.CustomEditText>

            <com.corebase.element.CustomEditText
                android:id="@+id/acRegister_et_LastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:text="Zangene" />
        </LinearLayout>

        <com.corebase.element.CustomEditText
            android:id="@+id/acRegister_et_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:text="9399477295" />

        <com.corebase.element.CustomEditText
            android:id="@+id/acRegister_et_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text="convertersoft@gmail.com" />

        <com.corebase.element.CustomEditText
            android:id="@+id/acRegister_et_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="1598753pedped" />

        <CheckBox
            android:id="@+id/acRegister_chb_Gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <CheckBox
            android:id="@+id/acRegister_chb_Term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="@string/i_accept_term_of_services" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical" >

        <com.corebase.element.CustomButton
            android:id="@+id/acRegister_btn_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />

        <com.corebase.element.CustomButton
            android:id="@+id/acRegister_btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login" />
    </LinearLayout>

</LinearLayout>