<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <fragment
            android:id="@+id/acContactUs_fragmentMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            class="com.google.android.gms.maps.MapFragment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical"
            android:padding="24dp" >

            <com.corebase.element.CustomTextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.corebase.element.CustomTextView
                android:id="@+id/acContactUs_txt_Address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.corebase.element.CustomTextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/phone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.corebase.element.CustomTextView
                android:id="@+id/acContactUs_txt_Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.corebase.element.CustomButton
                android:id="@+id/acContactUs_btn_SendMessage"
                style="@style/btnprimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/send_message" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>